--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container">
       <h1 id="header">SELECT YOUR CHOICE</h1>
-      <!-- product category select tabs -->
+      <!-- product category selection tabs -->
       <div class="choices-btn-group">
         <button><img src="./assets/vectors/men.png">Men</button>
         <button><img src="./assets/vectors/women.png">Women</button>
@@ -25,7 +25,7 @@
       <!-- cards data will show with fethced data from js file-->
       <div class="cards"></div>
     </div>
-    <!-- insert js file -->
+    <!-- insertion of js file -->
     <script src="./script.js"></script>
   </body>
 </html>
